--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main-container{
-    background-image: url("C:\Users\DR1006\React_project\public\Image\download.jpg");
+    background-image: url("Image\download.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
