--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main-container{
-    background-image: url("Image/download.jpg");
+    background-image: url("https://images.unsplash.com/photo-1608889175123-683927c77861.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
