--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main-container{
-    background-image: url("Image\bg.jpg");
+    background-image: url("bg.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
