--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main-container{
-    background-image: url("bg.jpg");
+    background-image: url("https://www.pexels.com/photo/green-pine-trees-near-body-of-water-1064162/");
     background-size: cover;
     background-position: center;
     display: flex;
