--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main-container{
-    background-image: url("https://www.pexels.com/photo/green-pine-trees-near-body-of-water-1064162/");
+    background-image: url("https://images.unsplash.com/photo-1745750747234-9584cbd65358?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw3N3x8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
     background-position: center;
     display: flex;
